--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <p>It has an option to <strong>anonymize IP addresses</strong> to comply with <strong>European privacy laws</strong>.</p>
 
-<p>Works with <strongJoomla! 2.5</strong> and <strong>Joomla! 3+</strong></p>
+<p>Works with <strong>Joomla! 2.5</strong> and <strong>Joomla! 3+</strong></p>
 
 <h2>
 <a id="installation-and-usage" class="anchor" href="#installation-and-usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation &amp; Usage</h2>
