--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
 
 <p>Simple Google Analytics is a Joomla! plugin which allows you to <strong>add Google Analytics tracking code to your Joomla! website</strong>.</p>
 
-<p>It has an option to <strong>anonymize IP addresses</strong> to comply with <strong>European privacy laws</strong>.</p>
+<p>It has an option to <strong>anonymize IP addresses</strong> to help you to comply with <strong>European privacy laws</strong>.</p>
 
 <p>Works with <strong>Joomla! 2.5</strong> and <strong>Joomla! 3+</strong></p>
+
+<p><strong>Just enable the plugin and insert your tracking code to start tracking your visitors!</strong></p>
 
 <h2>
 <a id="installation-and-usage" class="anchor" href="#installation-and-usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation &amp; Usage</h2>
